--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "firebase": "^10.12.0",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
