--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "18.3.1",
