--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-loading-icons": "^1.1.0",
     "stripe": "^15.7.0"
   },
   "devDependencies": {
