--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.12.0",
     "firebase-admin": "^12.1.0",
     "jotai": "^2.8.0",
+    "lucide-react": "^0.378.0",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "18.3.1",
