--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.5.1",
     "@stripe/stripe-js": "^3.4.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -27,7 +28,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-loading-icons": "^1.1.0",
-    "stripe": "^15.7.0"
+    "stripe": "^15.7.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
