--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.378.0",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-loading-icons": "^1.1.0",
